# sourceadmintool

./: .gitignore  CMakeLists.txt  SourceAdminTool.pro  app_list_map.ini  customitems.cpp  customitems.h  dark-theme.qss  database.cpp  database.h  icons.qrc  latencydialog.cpp  latencydialog.h  loghandler.cpp  loghandler_slots.cpp  main.cpp  main_events.cpp  main_slots.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maphistorydialog.cpp  maphistorydialog.h  pingcheck.cpp  pingcheck.h  playerhistorydialog.cpp  playerhistorydialog.h  query.cpp  query.h  query_slots.cpp  rcon_slots.cpp  serverbrowser.cpp  serverbrowser.h  serverinfo.cpp  serverinfo.h  settings.cpp  settings.h  simplecrypt.cpp  ui_mainwindow.h  ui_mainwindow.h.qt5.bak  updatechecker.h  (+3 more)
.github/workflows/: build.yml  release.yml
